using mock for the answers

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Shorts Summary</h1>
 
       <form id="form">
-        <input type="url" id="url" placeholder="URL do vídeo">
+        <input type="url" id="input" placeholder="URL do vídeo">
         <button title="resumir">
           <i class="ph ph-play"></i>
         </button>
